--- a/settings/config.json
+++ b/settings/config.json
@@ -2,14 +2,13 @@
   "cameras": [
     {
       "id": "camera1",
-      "name": "Standaard Camera",
+      "name": "Default Camera",
       "type": "cowcatcher",
       "rtsp_url": "rtsp://admin:pass@192.168.1.x:554/stream",
       "enabled": true,
       "show_live_feed": false,
       "telegram_bot": "",
       "notify_threshold": 0.87,
-      "peak_detection_threshold": 0.89,
       "save_images": true,
       "model_path": "cowcatcherV15.pt"
     }
@@ -17,7 +16,7 @@
   "cowcatcher_settings": {
     "master_model_url": "https://github.com/CowCatcherAI/CowCatcherAI/releases/download/modelv-14/cowcatcherV15.pt",
     "available_models": [],
-    "save_threshold": 0.83,
+    "save_threshold": 0.85,
     "process_every_n_frames": 2,
     "min_high_confidence_detections": 3,
     "max_screenshots": 2,
@@ -44,4 +43,3 @@
     "users": []
   }
 }
-
